# ebony-enriching

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/ebony_enriching/: __init__.py  __main__.py  app.py  config.py  mutex.py  permissions.py  schema.py  server.py  tools.py
src/ebony_enriching/storage/: gaps.py  markdown.py  paths.py
tests/: _mcp_helpers.py  conftest.py  test_cross_server.py  test_experiments.py  test_gaps.py  test_mutex.py  test_parallel.py  test_proposals.py  test_schema.py  test_server.py
