[project]
name = "ebony-enriching"
version = "0.0.1"
description = "MCP server: the lab notebook substrate (proposals + experiments + gap signals) for ParkviewLab's CoGrind project."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Gary", email = "garycoding@gmail.com" }]
# Deliberately small dep set vs. smalt-mcp's: ebony-enriching is text +
# filesystem only. No LanceDB, no embedder, no LLM client. Queries are
# filesystem walks; volumes (proposals / experiments / gaps) are small
# enough even on a mature Smalt that this stays viable indefinitely.
dependencies = [
    "mcp[cli]>=1.27.0",
    "fastapi",
    "uvicorn[standard]",
    "starlette",
    "pydantic",
    "python-frontmatter",
    "pyyaml",
]

[project.scripts]
ebony-enriching = "ebony_enriching.__main__:main"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ebony_enriching"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# Integration tests are opt-in (require external resources — e.g. a
# real smalt-mcp subprocess for the cross-server scenario tests).
# Default `pytest` excludes them; run explicitly with `pytest -m integration`.
addopts = "-m 'not integration'"
markers = [
    "integration: tests that exercise external services (smalt-mcp subprocess, etc.)",
]

[tool.ruff]
line-length = 110
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "C4", "RUF"]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.ty.src]
include = ["src"]

[tool.ty.environment]
python-version = "3.13"
